[project]
name = "resumate"
version = "0.1.0"
description = "A declarative Python based CLI tool that generates resumes from YAML files using LaTeX templates"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "typer>=0.20.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.5",
]
